back(infra-http): implement integ test & fix remaining http issues
